nixrs-derive/tests/ui/parse_bad_default.stderr
error: expected nix attribute default to be string
 --> tests/ui/parse_bad_default.rs
  |
  |     #[nix(default = 12)]
  |                     ^^
